# rust-raytracer

./: Cargo.toml  README.md
src/: colour.rs  main.rs  renderer.rs
src/hittable/: hittable_list.rs  mod.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/ray/: colour.rs  mod.rs  vec.rs
src/scene/: camera.rs  image_data.rs  mod.rs
src/utility/: mod.rs  vec.rs
