[package]
name = "rust-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
nalgebra = "0.29.0"
rand = "0.8.4"
rayon = "1.5.1"
enum_dispatch = "0.3.7"
fltk = { version = "^1.3", features = ["fltk-bundled"] }